<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:background="@color/white"
    tools:context=".Activity.MainActivity">

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/img_login"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/img_login" />

    <LinearLayout
        android:id="@+id/text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/img_login">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_text"
            android:fontFamily="@font/nexabold"
            android:textColor="#252A34"
            android:textSize="12pt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/second_text"
            android:fontFamily="@font/nexabold"
            android:textColor="@color/gray"
            android:layout_marginTop="5dp"
            android:textSize="8pt" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_getStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rounded"
        android:text="@string/btn_get_started_title"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:textColor="@color/black" />


</RelativeLayout>