<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.SignInActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:navigationContentDescription="@string/abc_action_bar_up_description"
        tools:ignore="PrivateResource" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:layout_below="@id/toolbar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_nback"
            android:fontFamily="@font/nexabold"
            android:textColor="@color/dark_blue"
            android:textSize="20pt" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="50dp">

            <EditText
                android:id="@+id/et_email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:hint="@string/edt_email"
                android:padding="20dp"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/et_password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:hint="@string/edt_password"
                android:padding="20dp"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sign_b_in_b"
                android:fontFamily="@font/nexalight"
                android:textColor="@color/dark_blue"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="19pt" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/yellow"
                android:layout_marginEnd="10dp"
                android:layout_margin="5dp"
                android:clickable="true"
                android:src="@drawable/ic_icon_feather_arrow_right"
                android:focusable="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="100dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:fontFamily="@font/nexabold"
                android:textColor="@color/gray"
                android:layout_marginTop="5dp"
                android:textSize="8pt" />

            <View
                android:layout_width=   "0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:fontFamily="@font/nexabold"
                android:textColor="@color/gray"
                android:layout_marginTop="5dp"
                android:textSize="8pt" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>